ensure unlock with hww button text doesnt break on 2 lines
Changed authentication wallet buttons to use flexbox to position
link text and wallet logo next to each other or if there is not
enough space wrap onto separate line but keep the text centered.

--- a/app/public/css/styles.css
+++ b/app/public/css/styles.css
@@ -478,42 +478,40 @@ p.hey {
   margin-top: 8px;
 }
 
-.button.bitbox {
-  position: relative;
-  padding-right: 119px;
+.authentication-wallet .button {
+  display: flex;
+  align-items: center;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: space-between;
+}
+
+.authentication-button-label {
+  flex-grow: 1;
+  white-space: nowrap;
 }
 
 .bitbox-logo-container {
-  position: absolute;
-  right: 24px;
-  top: 16px;
+  flex-grow: 1;
+  padding-left: 10px;
+  position: relative;
   width: 86px;
   height: 21px;
 }
 
-.button.trezor {
-  position: relative;
-  padding-right: 119px;
-}
-
 .trezor-logo-container {
-  position: absolute;
-  right: 24px;
-  top: 16px;
-  width: 79px;
+  flex-grow: 1;
+  padding-left: 10px;
+  position: relative;
+  width: 86px;
   height: 22px;
 }
 
-.button.ledger {
-  position: relative;
-  padding-right: 119px;
-}
-
 .ledger-logo-container {
-  position: absolute;
-  right: 24px;
-  top: 19px;
-  width: 82px;
+  flex-grow: 1;
+  padding-left: 10px;
+  position: relative;
+  width: 86px;
   height: 20px;
 }
 
